--- a/client/src/components/DoctorAppointment/index.scss
+++ b/client/src/components/DoctorAppointment/index.scss
@@ -1,6 +1,6 @@
 @import '../../variable.scss';
 
-.order-call{
+.doctor-appointment{
     position: relative;
     width: 30%;
     height: auto;
@@ -11,7 +11,7 @@
     background-color: #fff;
     padding: 30px;
     transform-style: preserve-3d;
-    
+
     &::before{
         @include popup__before();
     }
@@ -62,9 +62,10 @@
         }
 
         &__agree{
-            top: 160px;
+            top: 220px;
         }
     }
+
 
     &__agree-block{
         display: flex;
