Add CRUD for Review

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -353,6 +353,7 @@
         background-color: #C9DEFF;
         border-radius: 30px;
         padding: 10px 30px;
+        width: 70%;
 
         &:first-child{
             margin-bottom: 30px;
