--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -1,75 +1,222 @@
 @import '../../variable.scss';
 
 .menu{
-  padding: 20px 0;
+    padding: 20px 0;
 
-  &__wrapper{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
+    &__wrapper{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-  &__list{
-      display: flex;
-      justify-content: space-between;
-      list-style: none;
-      padding: 0;
-  }
+    &__container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 78%;
+        margin-left: auto;
+    }
 
-  &__item + &__item{
-      margin-left: 40px;
-  }
+    &__list{
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        padding: 0;
+    }
 
-  &__link{
-      color: $black;
-      text-decoration: none;
-  }
+    &__item + &__item{
+        margin-left: 40px;
+    }
 
-  &__order-call{
-      @include button();
-  }
+    &__link{
+        color: $black;
+        text-decoration: none;
+    }
+
+    &__order-call{
+        @include button();
+    }
+
+    &__phone{
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        margin-right: 10px;
+        display: none;
+    }
+
+    .hamburger-react{
+        display: none;
+
+        div{
+            background-color: #214289 !important;
+        }
+    }
+
+    &__open{
+        display: flex;
+        align-items: center;
+    }
+
+    &__info{
+        display: none;
+    }
+
 }
 
-.header{
-  height: calc(100vh - 150px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-image: url("../../images/header-bg.jpg");
-  background-size: cover;
+    .header{
+    height: calc(100vh - 150px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-image: url("../../images/header-bg.jpg");
+    background-size: cover;
 
-  &__wrapper{
-      height: 100%;
-      position: relative;
-  }
-  .container{
-      height: 100%;
-  }
+    &__wrapper{
+        height: 100%;
+        position: relative;
+    }
+    .container{
+        height: 100%;
+    }
 
-  &__content{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: 100%;
-  }
+    &__content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+    }
 
-  &__description{
-      @include text(16px, 400, 22px);
-      margin: 0 0 20px 0;
-  }
+    &__description{
+        @include text(16px, 400, 22px);
+        margin: 0 0 20px 0;
+    }
 
-  &__sign-up{
-      @include button;
-  }
+    &__sign-up{
+        @include button;
+    }
 
-  &__girl{
-      position: relative;
-      height: 100%;
-  }
+    &__girl{
+        position: relative;
+        height: 100%;
+    }
 
-  &__tools{
-      position: absolute;
-      bottom: -20%;
-      left: 8%;
-  }
+    &__tools{
+        position: absolute;
+        bottom: -20%;
+        left: 8%;
+    }
+    .circle{
+        width: 525px;
+        height: 525px;
+        background-color: $orange;
+        border-radius: 100%;
+        position: relative;
+        bottom: -40%;
+    }
+
+    .girl{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .header{
+        .girl{
+            width: 55%;
+            height: auto;
+        }
+        .circle{
+            width: 350px;
+            height: 350px;
+            bottom: -45%;
+        }
+    }
+}
+@media screen and (max-width: 900px){
+    .menu{
+        &__item + &__item{
+            margin-left: 15px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px){
+    .menu{
+        .logo{
+            position: relative;
+            z-index: 20;
+        }
+
+        &__container{
+            display: none;
+            position: absolute;
+            height: 200vh !important;
+            width: 100%;
+            left: 0;
+            top: 0;
+            background-color: #EBF3FF;
+            z-index: 5;
+
+            &.active{
+                display: block;
+            }
+        }
+
+        &__list{
+            display: block;
+            margin-top: 100px;
+            padding: 0 20px;
+        }
+
+        &__item{
+            padding: 20px 20px 10px;
+            border-bottom: 1px solid #D9D9D9;
+            
+
+            & + & {
+                margin: 0;
+            }
+        }
+
+        &__link{
+            @include text(20px, 600, 24px);
+            color: $blue;
+        }
+
+        &__info{
+            display: block;
+            list-style:none;
+            padding: 0;
+            margin-left: 20px;
+
+            &-item{
+                display: flex;
+                align-items: center;
+                padding: 0;
+                color: #D9D9D9;
+                margin: 0 0 20px 10px;
+                p{
+                    margin: 0;
+                }
+            }
+        }
+
+        &__order-call{
+            margin-left: 20px;
+        }
+
+        &__phone{
+            display: block;
+        }
+
+        .hamburger-react{
+            display: block;
+            z-index: 20;
+        }
+    }
 }
