--- a/client/src/pages/AdminPanel/Offers/offers.scss
+++ b/client/src/pages/AdminPanel/Offers/offers.scss
@@ -32,6 +32,12 @@
 
         &-lable{
             position: relative;
+            display: block;
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            cursor: pointer;
+            
             img{
                 display: block;
                 width: 100%;
