--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,28 +1,14 @@
 @import '../../variable.scss';
 
 
-.circle{
-    width: 525px;
-    height: 525px;
-    background-color: $orange;
-    border-radius: 100%;
-    position: relative;
-    bottom: -40%;
-}
 
-.girl{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
 .guarantee{
     background-color: #fff;
     position: relative;
     background-image: url("../../images/guarantee-bg.jpg");
     background-size: 100% 100%;
-    padding: 50px 0;
+    padding: 50px 0 20px;
 
     &__description{
         @include text(16px, 400,24px);
@@ -45,6 +31,15 @@
             @include text(40px, 800, 40px);
             color: $light-blue;
             transform: translateZ(-1px);
+        }
+    }
+
+    .swiper{
+        position: relative;
+        padding-bottom: 40px;
+        &-pagination{
+            bottom: var(--swiper-pagination-bottom, 0px);
+            z-index: 10;
         }
     }
 }
@@ -166,7 +161,7 @@
 }
 
 .offers{
-    padding: 20px 0 50px 0;
+    padding: 20px 0 30px 0 !important;
     background-image: url('../../images/dots.png');
     background-position: 0 100%;
     background-repeat: no-repeat;
@@ -190,6 +185,15 @@
     &__description{
         @include text(14px, 400, 18px);
         margin: 10px 0 0;
+    }
+
+    .swiper{
+        position: relative;
+        padding-bottom: 40px;
+        &-pagination{
+            bottom: var(--swiper-pagination-bottom, 0px);
+            z-index: 10;
+        }
     }
 }
 
@@ -434,4 +438,6 @@
         display: none !important;
     }
 }
+
+@import './media.scss';
 
