Adapted all pages

--- a/client/src/components/AskQuestion/index.scss
+++ b/client/src/components/AskQuestion/index.scss
@@ -15,6 +15,9 @@
     &::before{
         @include popup__before();
     }
+    &__description{
+        @include simpleText();
+    }
 
     &__close{
         position: relative;
@@ -90,6 +93,40 @@
     &__submit{
         @include button();
         margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 1100px){
+    .ask-question{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .ask-question{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .ask-question{
+        width: 90%;
+        &__description{
+            margin: 5px 0;
+        }
+        &__form{
+            margin-top: 10px;
+        }
+        &__agree-block{
+            margin-top: 15px;
+        }
+        label{
+            font-size: 12px;
+            line-height: 15px;
+        }
+        input::placeholder{
+            font-size: 14px;
+        }
     }
 }
 
