--- a/client/src/pages/AdminPanel/Doctors/doctors.scss
+++ b/client/src/pages/AdminPanel/Doctors/doctors.scss
@@ -94,3 +94,26 @@
         height: auto;
     }
 }
+
+@media screen and (max-width: 768px){
+    .doctors{
+        &__item{
+            width: 30%;
+        }
+    }
+}
+@media screen and (max-width: 600px){
+    .doctors{
+        &__item{
+            width: 45%;
+        }
+    }
+}
+@media screen and (max-width: 500px){
+    .doctors{
+        &__item{
+            width: 80%;
+            margin: 0 auto 20px;
+        }
+    }
+}
