--- a/client/src/pages/AdminPanel/Offers/offers.scss
+++ b/client/src/pages/AdminPanel/Offers/offers.scss
@@ -102,3 +102,26 @@
         border-radius: 10px;
     }
 }
+
+@media screen and (max-width: 768px){
+    .offers{
+        &__item{
+            width: 30%;
+        }
+    }
+}
+@media screen and (max-width: 600px){
+    .offers{
+        &__item{
+            width: 45%;
+        }
+    }
+}
+@media screen and (max-width: 500px){
+    .offers{
+        &__item{
+            width: 80%;
+            margin: 0 auto 20px;
+        }
+    }
+}
