--- a/client/src/pages/AdminPanel/Services/index.scss
+++ b/client/src/pages/AdminPanel/Services/index.scss
@@ -1,5 +1,10 @@
 @import '../../../variable.scss';
 
+.admin{
+  .prices{
+    padding: 80px 0 0;
+  }
+}
 
 .services__controlls {
   margin-top: 35px;
