--- a/client/src/components/DoctorAppointment/index.scss
+++ b/client/src/components/DoctorAppointment/index.scss
@@ -89,4 +89,40 @@
     }
 }
 
+@media screen and (max-width: 1100px){
+    .doctor-appointment{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .doctor-appointment{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .doctor-appointment{
+        width: 90%;
+        &__description{
+            margin: 5px 0;
+        }
+        &__form{
+            margin-top: 10px;
+        }
+        &__agree-block{
+            margin-top: 15px;
+        }
+        label{
+            font-size: 12px;
+            line-height: 15px;
+            margin-top: 7px;
+        }
+
+        input::placeholder{
+            font-size: 14px;
+        }
+    }
+}
+
 
