--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,107 +1,18 @@
 @import '../../variable.scss';
 
-.menu{
-    padding: 20px 0;
-
-    &__wrapper{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &__list{
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
-        padding: 0;
-    }
-
-    &__item + &__item{
-        margin-left: 40px;
-    }
-
-    &__link{
-        color: $black;
-        text-decoration: none;
-    }
-
-    &__order-call{
-        @include button();
-    }
-}
-
-.header{
-    height: calc(100vh - 150px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-image: url("../../images/header-bg.jpg");
-    background-size: cover;
-
-    &__wrapper{
-        height: 100%;
-        position: relative;
-    }
-    .container{
-        height: 100%;
-    }
-
-    &__content{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
-    }
-
-    &__description{
-        @include text(16px, 400, 22px);
-        margin: 0 0 20px 0;
-    }
-
-    &__sign-up{
-        @include button;
-    }
-
-    &__girl{
-        position: relative;
-        height: 100%;
-    }
-
-    &__tools{
-        position: absolute;
-        bottom: -20%;
-        left: 8%;
-    }
-}
-
-.circle{
-    width: 525px;
-    height: 525px;
-    background-color: $orange;
-    border-radius: 100%;
-    position: relative;
-    bottom: -40%;
-}
-
-.girl{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
 .guarantee{
     background-color: #fff;
     position: relative;
     background-image: url("../../images/guarantee-bg.jpg");
     background-size: 100% 100%;
-    padding: 50px 0;
+    padding: 50px 0 20px;
 
     &__description{
-        @include text(16px, 400,24px);
+        @include simpleText();
         margin: 5px 0 0;
     }
-    
+
     .swiper-slide{
         position: relative;
         padding-top: 10px;
@@ -118,6 +29,15 @@
             @include text(40px, 800, 40px);
             color: $light-blue;
             transform: translateZ(-1px);
+        }
+    }
+
+    .swiper{
+        position: relative;
+        padding-bottom: 40px;
+        &-pagination{
+            bottom: var(--swiper-pagination-bottom, 0px);
+            z-index: 10;
         }
     }
 }
@@ -138,7 +58,6 @@
     &__wrapper{
         display: flex;
         justify-content: space-between;
-        align-items: center;
         flex-wrap: wrap;
     }
 
@@ -170,7 +89,7 @@
     }
 
     &__description{
-        @include text(16px, 400, 24px);
+        @include simpleText();
         color: #A8A9BE;
         margin: 0;
     }
@@ -182,10 +101,10 @@
     background-repeat: no-repeat;
     background-position: 0 0, 0 100%;
     background-size: auto, 100%;
-    
+
 
     &__description{
-        @include text(16px, 400, 24px);
+        @include simpleText();
         color: #C3C4D2;
         width: 80%;
         margin: 5px 0 0 0;
@@ -204,12 +123,13 @@
         height: 40px;
         border-radius: 10px;
 
-        
+
 
         th{
-            @include text(16px, 800, 20px);
+            @include simpleText();
             color: $blue;
             text-align: left;
+            font-weight: 700;
             &:first-child{
                 border-radius: 10px 0 0;
                 padding: 0 12px 0;
@@ -239,7 +159,7 @@
 }
 
 .offers{
-    padding: 20px 0 50px 0;
+    padding: 20px 0 30px 0 !important;
     background-image: url('../../images/dots.png');
     background-position: 0 100%;
     background-repeat: no-repeat;
@@ -255,7 +175,7 @@
     }
 
     &__subtitle{
-        @include text(16px, 600, 20px);
+        @include simpleText();
         margin: 5px 0;
         color: $blue;
     }
@@ -263,6 +183,15 @@
     &__description{
         @include text(14px, 400, 18px);
         margin: 10px 0 0;
+    }
+
+    .swiper{
+        position: relative;
+        padding-bottom: 40px;
+        &-pagination{
+            bottom: var(--swiper-pagination-bottom, 0px);
+            z-index: 10;
+        }
     }
 }
 
@@ -286,7 +215,7 @@
     }
 
     &__text{
-        @include text(16px, 400, 22px);
+        @include simpleText();
     }
 
     &__content{
@@ -439,7 +368,7 @@
     }
 
     &__user-name{
-        @include text(16px, 700, 22px);
+        @include simpleText();
         color: $dark-blue;
         margin: 0;
     }
@@ -451,7 +380,7 @@
     }
 
     &__content{
-        @include text(16px, 600, 22px);
+        @include simpleText();
         margin: 10px 0;
     }
 
@@ -508,39 +437,37 @@
     }
 }
 
-.footer{
-    background-color: $dark-blue;
-    padding: 30px 0;
 
-    &__wrapper{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+.guarantee{
+    background-color: #fff;
+    position: relative;
+    background-image: url("../../images/guarantee-bg.jpg");
+    background-size: 100% 100%;
+    padding: 50px 0;
+
+    &__description{
+        @include simpleText();
+        margin: 5px 0 0;
     }
 
-    &__phone, &__email, &__address{
-        a,p{
-            display: block;
-            color: #fff;
-            text-decoration: none;
-            @include text(14px, 500, 18px);
+    .swiper-slide{
+        position: relative;
+        padding-top: 10px;
+        transform-style: preserve-3d;
+    }
 
-            &:first-child{
-                margin-bottom: 10px;
-            }
+    @for $i from 1 through 4 {
+
+        .swiper-slide:nth-child(#{$i})::before {
+            content: '0'+#{$i};
+            position: absolute;
+            top:-3px;
+            left: -30px;
+            @include text(40px, 800, 40px);
+            color: $light-blue;
+            transform: translateZ(-1px);
         }
-    }
-
-    &__social{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        a + a{
-            margin-left: 10px;
-        }
-    }
-
-    &__order-call{
-        @include button();
     }
 }
+
+@import './media.scss';
